# Raymarching-Renderer

./: .gitignore  CMakeLists.txt  README.md
include/: shader.h
shaders/: SMinExample.glsl  ScreenFragment.glsl  ScreenVertex.glsl  templateFragment.glsl
src/: main.cpp  shader.cpp
